force-app/main/default/objects/Interview__c/fields/Criterias_Difference__c.field-meta.xml
<CustomField>
    <fullName>Criterias_Difference__c</fullName>
    <label>Criterias/ Difference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>