force-app/main/default/objects/Interview__c/fields/Disponibility__c.field-meta.xml
<CustomField>
    <fullName>Disponibility__c</fullName>
    <label>Disponibility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>Less than a month</fullName>
            </value>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>More than 3 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>