force-app/main/default/objects/Interview__c/fields/Interview_appointment__c.field-meta.xml
<CustomField>
    <fullName>Interview_appointment__c</fullName>
    <label>Interview appointment</label>
    <type>DateTime</type>
</CustomField>