force-app/main/default/objects/Interview__c/fields/Interviewer__c.field-meta.xml
<CustomField>
    <fullName>Interviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interviewer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SFL5__SFL5_Resource__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Employee</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Interviews (Interviewer)</relationshipLabel>
    <relationshipName>Interviews1</relationshipName>
    <type>Lookup</type>
</CustomField>