force-app/main/default/objects/Interview__c/fields/Interviewer_opinion__c.field-meta.xml
<CustomField>
    <fullName>Interviewer_opinion__c</fullName>
    <label>Interviewer opinion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>