force-app/main/default/objects/Interview__c/fields/Professional_experience__c.field-meta.xml
<CustomField>
    <fullName>Professional_experience__c</fullName>
    <label>Professional experience</label>
    <length>255</length>
    <type>Text</type>
</CustomField>