force-app/main/default/objects/Interview__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>SFL5__SFL5_Resource__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Candidate</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>SFL5__SFL5_Resource__c</referenceTo>
    <relationshipLabel>Interviews</relationshipLabel>
    <relationshipName>Interviews</relationshipName>
    <type>Lookup</type>
</CustomField>