force-app/main/default/objects/Interview__c/fields/salary_expectations__c.field-meta.xml
<CustomField>
    <fullName>salary_expectations__c</fullName>
    <label>salary expectations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>