force-app/main/default/objects/Interview__c/fields/Sector_of_activity__c.field-meta.xml
<CustomField>
    <fullName>Sector_of_activity__c</fullName>
    <label>Sector of activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>