force-app/main/default/objects/Interview__c/fields/the_current_situation__c.field-meta.xml
<CustomField>
    <fullName>the_current_situation__c</fullName>
    <label>the current situation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>