force-app/main/default/objects/Interview__c/fields/Top_3_5_technos__c.field-meta.xml
<CustomField>
    <fullName>Top_3_5_technos__c</fullName>
    <label>Top 3/5 technos</label>
    <length>255</length>
    <type>Text</type>
</CustomField>