force-app/main/default/objects/Interview__c/fields/Where_do_you_see_yourself_in_5_years__c.field-meta.xml
<CustomField>
    <fullName>Where_do_you_see_yourself_in_5_years__c</fullName>
    <label>Where do you see yourself in 5 years?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>