force-app/main/default/objects/Interview__c/fields/Who_was_there__c.field-meta.xml
<CustomField>
    <fullName>Who_was_there__c</fullName>
    <label>Who was there?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>