force-app/main/default/objects/Interview__c/recordTypes/EC1.recordType-meta.xml
<RecordType>
    <fullName>EC1</fullName>
    <active>true</active>
    <label>EC1</label>
</RecordType>