force-app/main/default/objects/Interview__c/recordTypes/EC2.recordType-meta.xml
<RecordType>
    <fullName>EC2</fullName>
    <active>true</active>
    <label>EC2</label>
</RecordType>