force-app/main/default/objects/Interview__c/recordTypes/EC3.recordType-meta.xml
<RecordType>
    <fullName>EC3</fullName>
    <active>true</active>
    <label>EC3</label>
</RecordType>