force-app/main/default/objects/Interview__c/recordTypes/TT.recordType-meta.xml
<RecordType>
    <fullName>TT</fullName>
    <active>true</active>
    <label>TT</label>
</RecordType>